[package]
name = "raykit_eduobjs"
version = "0.2.0"
authors = ["PluMGMK"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pmw1 = "0.1.0"
# I know this comes with health warnings, but I'm not doing sensitive crypto here, just sanity-checking the input...
md5 = "0.7.0"
